# library_proj

backend/: .gitignore  .pylintrc  alembic.ini  pyproject.toml
backend/app/: __init__.py  db.sqlite  main.py
backend/app/api/: asgi.py
backend/app/api/dependencies/: __init__.py  database.py
backend/app/core/: settings.py
backend/app/database/common/: __init__.py  database.py  entity.py  filters.py  functions.py  model_finder.py  repository.py
backend/app/database/common/mixins/: __init__.py  id.py
backend/app/database/models/books/: book.py
backend/app/database/repositories/: book.py
backend/app/utils/: app.py  db_driver.py  env.py  exceptions.py  middleware.py  overloads.py
backend/app/validators/books/: book.py
backend/app/validators/common/: __init__.py  base.py  functions.py  id.py
backend/migrations/: env.py
backend/migrations/versions/: 81878bed3e8d_create_table_books.py
